jvm demo