@@ -1,6 +1,17 @@
 package io.github.sruby.jvm.gclog;
 
 /**
+ -Xms8m
+ -Xmx8m
+ -verbose:gc
+ -XX:+PrintGCDetails
+ -XX:+PrintGCDateStamps
+ -XX:+PrintGCApplicationStoppedTime
+ -XX:+PrintGCApplicationConcurrentTime
+ -XX:+PrintHeapAtGC
+ -XX:+PrintTenuringDistribution
+ */
+/**
  * full gc demo 
  * @author sruby 
  * @date 2022-3-17 22:42 
